--- a/frontend/src/components/Workspace/DocumentViewer.css
+++ b/frontend/src/components/Workspace/DocumentViewer.css
@@ -27,13 +27,21 @@
 .document-container img {
   display: block;
   margin: 0 auto;
-  max-height: calc(100vh - 250px);
+  /* max-height: calc(100vh - 250px); */
   object-fit: contain;
 }
 
+.document-container img,
+.pdf-viewer iframe {
+  height: 100%;
+  width: 100%;
+  object-fit: contain;
+}
+
+
 .pdf-viewer {
   width: 100%;
-  height: calc(100vh - 250px);
+  /* height: calc(100vh - 250px); */
   overflow: auto;
 }
 
